--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon -r dotenv/config src/server.ts",
     "build": "tsc",
     "lint": "eslint src/**/*.ts"
   },
