--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.11",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^25.0.1",
+    "@types/nodemailer": "^7.0.4",
     "nodemon": "^3.1.11",
     "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
