--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.11",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "resend": "^6.6.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
